# xdpd

./: .gitmodules  .travis.yml
config/: hw.m4
src/xdpd/drivers/gnu_linux/src/io/packet_classifiers/c_types_pktclassifier/headers/: cpc_tcp.h
src/xdpd/drivers/gnu_linux/test/regression/: test_launcher.sh
src/xdpd/drivers/gnu_linux/test/regression/io/: mmap_port_test.sh
src/xdpd/drivers/gnu_linux_dpdk/src/: config.h
src/xdpd/drivers/gnu_linux_dpdk/src/io/: iface_manager.cc  nf_iface_manager.cc
src/xdpd/drivers/gnu_linux_dpdk/src/pipeline-imp/: memory.c
src/xdpd/drivers/ofdpa/: configure.ac
src/xdpd/drivers/ofdpa/src/: Makefile.am  bg_taskmanager.c  bg_taskmanager.h  config.cc  config.h
src/xdpd/drivers/ofdpa/src/hal-imp/: driver.c
src/xdpd/drivers/ofdpa/src/hal-imp/openflow/openflow1x/: of1x_driver.c
src/xdpd/drivers/ofdpa/src/ofdpa/: Makefile.am  ports.c  ports.h  tables.c  tables.h
src/xdpd/drivers/ofdpa/src/pipeline-imp/: platform_hooks_of1x.cc
